# MarketMind

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  REPLICA_SET_VERIFICATION.md  REQUIREMENTS_CHECKLIST.md  SHARDED_CLUSTER_SETUP.md  VERIFICATION_STATUS.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
scripts/: query_examples.py  run_in_docker.sh  run_pipeline.sh  setup_sharding.py  test_connection.py  verify_data.py
src/database/: __init__.py  connection.py  operations.py
src/models/: __init__.py  startup.py
src/pipeline/: aggregate.py  clean.py  data_generator.py  ingest.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_database.py  test_models.py  test_pipeline.py
